// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with props 1`] = `
<div>
  <Meta
    image="http://test.com/test.jpg"
    title="jimothy bob"
  />
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}
  >
    <Right
      background="http://test.com/test.jpg"
      blur={true}
      classes={
        Array [
          "floating",
          "overlay--solid-dark",
        ]
      }
      mobile={false}
      ratioClasses={
        Array [
          "floating__item",
          "overlay__item",
          "one-whole",
          "text-center",
        ]
      }
    >
      <div
        className="soft one-whole"
      >
        <label
          className="background--fill ratio--square round two-fifths display-inline-block"
          htmlFor="file"
          style={
            Object {
              "backgroundImage": "url('http://test.com/test.jpg')",
              "position": "relative",
            }
          }
        >
          <input
            className="locked-ends locked-sides"
            onChange={[Function]}
            style={
              Object {
                "opacity": 0,
              }
            }
            type="file"
          />
        </label>
        <h4
          className="text-light-primary soft-half-top flush-bottom"
        >
          jimothy
           
          bob
        </h4>
        <p
          className="text-light-primary flush"
        >
          <em>
            anderson
            , 
            SC
          </em>
        </p>
      </div>
    </Right>
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-primary",
      ]
    }
    scroll={true}
  >
    <h1>
      test
    </h1>
  </Left>
</div>
`;

exports[`says \`Profile\` if no nick name 1`] = `
<div>
  <Meta
    image="http://test.com/test.jpg"
    title="Profile"
  />
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}
  >
    <Right
      background="http://test.com/test.jpg"
      blur={true}
      classes={
        Array [
          "floating",
          "overlay--solid-dark",
        ]
      }
      mobile={false}
      ratioClasses={
        Array [
          "floating__item",
          "overlay__item",
          "one-whole",
          "text-center",
        ]
      }
    >
      <div
        className="soft one-whole"
      >
        <label
          className="background--fill ratio--square round two-fifths display-inline-block"
          htmlFor="file"
          style={
            Object {
              "backgroundImage": "url('http://test.com/test.jpg')",
              "position": "relative",
            }
          }
        >
          <input
            className="locked-ends locked-sides"
            onChange={[Function]}
            style={
              Object {
                "opacity": 0,
              }
            }
            type="file"
          />
        </label>
        <h4
          className="text-light-primary soft-half-top flush-bottom"
        >
          jim
           
          bob
        </h4>
        <p
          className="text-light-primary flush"
        >
          <em>
            anderson
            , 
            SC
          </em>
        </p>
      </div>
    </Right>
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-primary",
      ]
    }
    scroll={true}
  >
    <h1>
      test
    </h1>
  </Left>
</div>
`;

exports[`works without a photo 1`] = `
<div>
  <Meta
    image={null}
    title="jimothy bob"
  />
  <Connect(SplitContainerWithoutData)
    classes={
      Array [
        "background--light-primary",
      ]
    }
    nav={true}
  >
    <Right
      background={null}
      blur={true}
      classes={
        Array [
          "floating",
          "overlay--solid-dark",
        ]
      }
      mobile={false}
      ratioClasses={
        Array [
          "floating__item",
          "overlay__item",
          "one-whole",
          "text-center",
        ]
      }
    >
      <div
        className="soft one-whole"
      >
        <label
          className="background--fill ratio--square round two-fifths display-inline-block"
          htmlFor="file"
          style={
            Object {
              "backgroundImage": "url('')",
              "position": "relative",
            }
          }
        >
          <input
            className="locked-ends locked-sides"
            onChange={[Function]}
            style={
              Object {
                "opacity": 0,
              }
            }
            type="file"
          />
        </label>
        <h4
          className="text-light-primary soft-half-top flush-bottom"
        >
          jimothy
           
          bob
        </h4>
        <p
          className="text-light-primary flush"
        >
          <em>
            anderson
            , 
            SC
          </em>
        </p>
      </div>
    </Right>
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-primary",
      ]
    }
    scroll={true}
  >
    <h1>
      test
    </h1>
  </Left>
</div>
`;
